server: acl route to output ACL-per-target info
